// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Displays checked status when passed completed boolean 1`] = `
<div
  className="TodoItem center mw-100 mw8-ns ba bw1 b--black-40 br2 mv3"
>
  <div
    className="flex items-center pa3 f4 f4-ns lh-copy"
  >
    <input
      checked={false}
      className="Checkbox"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="dib"
    >
      Task 1
    </div>
  </div>
</div>
`;

exports[`Displays item content passed as child string 1`] = `
<div
  className="TodoItem center mw-100 mw8-ns ba bw1 b--black-40 br2 mv3"
>
  <div
    className="flex items-center pa3 f4 f4-ns lh-copy"
  >
    <input
      checked={false}
      className="Checkbox"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="dib"
    >
      Task 1
    </div>
  </div>
</div>
`;

exports[`Renders empty children without crashing 1`] = `
<div
  className="TodoItem center mw-100 mw8-ns ba bw1 b--black-40 br2 mv3"
>
  <div
    className="flex items-center pa3 f4 f4-ns lh-copy"
  >
    <input
      checked={false}
      className="Checkbox"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="dib"
    />
  </div>
</div>
`;
